# media-cloud-api

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  run-db.sh
app/api/v1/: media_cloud.py  media_file.py
app/core/: config.py  constants.py  logging.py
app/db/: schema.py  session_dependency.py
app/models/: file.py  media_directory.py  media_file.py
app/services/: auth_service.py  media_cloud_service.py  media_file_service.py
app/utils/: media_utils.py
